# type-theory-rs

./: Cargo.toml
ast/: Cargo.toml
ast/src/: ast.rs  into_ast.rs  lib.rs
codes/: access.sexp  bound.sexp  case.sexp  curry1.sexp  curry2.sexp  fn.sexp  let_poly.sexp  let_wo_type.sexp  list.sexp  macro.sexp  map.sexp  op.sexp  prelude.sexp  record.sexp  specialize.sexp  type.sexp  union_type.sexp
hindley-milner/: Cargo.toml
hindley-milner/src/: infer.rs  issuer.rs  lib.rs  main.rs  types.rs
interpreter/: Cargo.toml
interpreter/src/: ast.rs  builtin.rs  env.rs  environment.rs  eval.rs  externals.rs  infer.rs  interpreter.rs  interpreter_env.rs  into_ast.rs  main.rs  scope.rs  traits.rs  type_check.rs
structural-typesystem/: Cargo.toml
structural-typesystem/src/: builtin_types.rs  infer.rs  issuer.rs  lib.rs  subtyping.rs  type_alloc.rs  type_check.rs  type_env.rs  type_eval.rs  types.rs
