[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4.17"
symbolic_expressions = "5.0.3"
structural-typesystem = { path = "../structural-typesystem" }
hindley-milner = { path = "../hindley-milner" }
ast = { path = "../ast" }
rand = "0.8.5"
petgraph = "0.6.3"
ptree = "0.4.0"
simple_logger = "4.2.0"